Fixes #13417: fields are not correctly aligned in group page

--- a/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -342,7 +342,7 @@ form select.selectField {
    width: 220px;
 }
 
-input.queryInputValue, select.queryInputValue {
+.content-wrapper input.queryInputValue, .content-wrapper select.queryInputValue {
   width:280px;
   margin: 0px;
   padding: 0px;
